# causal-judge-evaluation

./: .claude_hygiene  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  AGENTS.md  ARCHITECTURE_REVIEW.md  CJE_IMPLEMENTATION_GUIDE.md  CLAUDE.md  CODEBASE_ARCHITECTURE_OVERVIEW.md  CODEBASE_REVIEW.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DIAGNOSTICS_ROADMAP.md  DIAGNOSTIC_FLOW_ANALYSIS.md  DIAGNOSTIC_SIMPLIFICATION_PLAN.md  ESTIMATOR_TEST_RESULTS.md  FINAL_WORK_SUMMARY.md  FOLD_BREAKING_ISSUES.md  FOLD_IMPLEMENTATION_REVIEW.md  FOLD_INTEGRATION_TEST_PLAN.md  FOLD_MANAGEMENT_PLAN.md  FOLD_PLAN_RETROSPECTIVE.md  FRESH_DRAWS_WORKFLOW_PLAN.md  INTEGRATION_PLAN.md  LEGACY_CLEANUP_SUMMARY.md  LEGACY_CODE_AUDIT.md  LESSONS_LEARNED.md  LLAMA_CPP_TEST_SUMMARY.md  MRDR_FOLD_FIX_PLAN.md  Makefile  OVERLAP_METRICS_PLAN.md  README.md  README_Pi0_Generation.md  README_UPDATE_PLAN.md  README_simple.md  REFACTORING_SUMMARY.md  SIMPLIFICATION_PLAN.md  (+22 more)
.claude/: settings.local.json
cje/: __init__.py  __main__.py  analysis.py  cache.py  cli.py  constants.py  core.py  example_usage.py  oracle_labeling.py  oracle_slice_example.py  pipeline.py  provider_registry.py  providers.py  reference.py  research.py  validation.py
cje_simplified/: README.md  __init__.py  example_usage.py
configs/: arena_10k_oracle.yaml  arena_10k_oracle_uncertainty.yaml  arena_research_experiment.yaml  arena_test.yaml  arena_test_uncertainty.yaml  example_eval.yaml  example_eval_uncertainty.yaml  uncertainty_example.yaml
docs/: API_REFERENCE.md  CONSOLIDATION_SUMMARY.md  DOCUMENTATION_REVIEW.md  DOCUMENTATION_UPDATES.md  FINAL_CONSOLIDATION.md  Makefile  SIMPLIFICATION_SUMMARY.md  THEORY.md  build.py  cli.rst  conf.py  custom_outcome_models.rst  data_format.rst  data_preparation.rst  diagnostics.rst  diagnostics_integration.md  doubly_robust.rst  estimators.rst  (+13 more)
(+891 files in other folders)
