[tool.poetry]
name = "causal-judge-evaluation"
version = "0.2.0"
description = "Causal Judge Evaluation - Unbiased LLM evaluation framework"
authors = ["Eddie Landesberg <eddie@fondutech.com>"]
license = "MIT"
packages = [{ include = "cje" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4"
torch = "^2.2"
transformers = "^4.52.2"
evaluate = "^0.4"
hydra-core = "^1.3"
rich = "^13.7"
typer = "^0.9"
datasets = "^2.19"
pyarrow = "^16.1"
tqdm = "^4.66"
accelerate = "^1.7.0"
xgboost = "^2.0"
sentence-transformers = "^2.7.0"
matplotlib = "^3.8"
scipy = "^1.11.0"
tiktoken = "^0.9.0"
openai = "^1.81.0"
pytest = "^8.3.5"
tenacity = "^9.1.2"
anthropic = "^0.52.1"
seaborn = "^0.13.2"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
langchain-core = "^0.3.63"
langchain-openai = "^0.3.18"
langchain-anthropic = "^0.3.14"
langchain-google-genai = "*"
google-generativeai = "*"
boto3 = "^1.38.28"
langchain-together = "^0.3.0"
hypothesis = "^6.135.7"
python-dotenv = "^1.1.0"
labelbox = "^7.0.0"
langchain = "^0.3.27"
langchain-fireworks = "^0.3.0"
blobfile = "^3.0.0"
pydantic = ">=2.6,<3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
mypy = "^1.10"
pytest = "^8.0"
pytest-cov = "^5.0"
pre-commit = "^3.7"
types-PyYAML = "^6.0"
ipykernel = "^6.29.5"
sphinx = ">=7.0,<8.0"
sphinx-rtd-theme = ">=2.0"
sphinx-autodoc-typehints = ">=1.25"
sphinx-copybutton = ">=0.5"
myst-parser = ">=2.0,<3.0"
watchdog = "^6.0.0"
pytest-xdist = "^3.7.0"

# CLI scripts can be defined here when needed

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["docs/"]
